# pfc-py

./: .gitignore  LICENSE  README.md  pyproject.toml
pfc/: __init__.py  _core.py
